--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,8 +1,5 @@
 name: Upload Website
 
-before_script:
-  - gem install aws-sdk-s3
-
 on:
   push:
     branches:
@@ -21,4 +18,4 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'us-west-1'
-        SOURCE_DIR: 'public'
+        SOURCE_DIR: 'app/views/layouts/application.html.erb'
